# D7045E-lab_environment

./: CMakeLists.txt
include/ImGui-dock/: CMakeLists.txt
include/glfw-3.3.2x64/include/GLFW/: glfw3.h
include/glm/: CMakeLists.txt
include/glm/glm/: CMakeLists.txt
src/App/: CMakeLists.txt  Sanbdox.cpp  Sandbox.cpp
src/Engine/: CMakeLists.txt  Engine.h  Engine_HEADERS.cmake  README.txt
src/Engine/Assets/: CMakeLists.txt  FBX_mesh.h  Instanced_mesh.cpp  Instanced_mesh.h  Mesh_import.h
src/Engine/Core/: CMakeLists.txt  Core.h  Window.cpp  Window.h
src/Engine/Event/: CMakeLists.txt  Event_actor.h  Event_actor_st.h  Event_system.cpp  Event_system.h  System_events.h
src/Engine/ImGui/: CMakeLists.txt  ImGui_build.h  ImGui_layer.cpp  ImGui_layer.h  ImGui_panel.h
src/Engine/Platform/: CMakeLists.txt  Platform.h
src/Engine/Platform/OpenGL/: CMakeLists.txt  GL_Cube_texture2D.cpp  GL_Cube_texture2D.h  GL_Framebuffer.cpp  GL_Framebuffer.h  GL_Frustum_compute_query.cpp  GL_Frustum_compute_query.h  GL_Texture2D.cpp  GL_Texture2D.h  GL_buffer.cpp  GL_buffer.h  GL_context.cpp  GL_context.h  GL_renderer_API.cpp  GL_renderer_API.h  GL_shader.cpp  GL_shader.h  GL_vertex_array.cpp  GL_vertex_array.h  OpenGL.h
src/Engine/Platform/Windows/: CMakeLists.txt  Keycodes.h  W_window.cpp  W_window.h
src/Engine/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Compute_query.h  Cube_texture2D.cpp  Cube_texture2D.h  FrameBuffer.cpp  FrameBuffer.h  Frustum_compute_query.cpp  Frustum_compute_query.h  GLFW_context.h  Light.cpp  Light.h  Material.h  Render_command.cpp  Render_command.h  Render_encoder.cpp  Render_encoder.h  Renderer.cpp  Renderer.h  Renderer_API.cpp  Renderer_API.h  Shader.cpp  Shader.h  Shader_constants.cpp  Shader_constants.h  Texture2D.cpp  Texture2D.h  Vertex_array.cpp  Vertex_array.h
src/Engine/Utils/: Sparse_set.h  Sparse_storage.h
src/Lab1/: CMakeLists.txt  Lab1.cpp
src/Lab2/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Color.h  Lab2.cpp  Line.h  Search_tree.cpp  Search_tree.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
src/Lab3/: CMakeLists.txt  GraphicsNode.cpp  Lab3.cpp  Monochrome_material.cpp  Monochrome_material.h
src/Lab4/: CMakeLists.txt  Cube_map.cpp  Cube_map.h  Geometry.cpp  Geometry.h  GraphicsNode.cpp  GraphicsNode.h  Lab4.cpp  Monochrome_material.cpp  Monochrome_material.h  Phong_material.cpp  Phong_material.h  Point_light.cpp  Point_light.h  Scene.cpp  Scene.h  Shadow_map.cpp  Shadow_map.h  Shadowmap_material.cpp  Shadowmap_material.h
