cmake_minimum_required(VERSION 3.16)
project(D7045E_LABS LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()
IF(APPLE)
    SET(CMAKE_CXX_FLAGS "-g -std=c++11 -stdlib=libc++")
ENDIF()

IF(MSVC)
    SET(OPENGL_LIBS opengl32.lib)
ELSEIF(APPLE)
    add_definitions(-Wno-deprecated-declarations)
    find_package(OpenGL REQUIRED)
    SET(OPENGL_LIBS pthread ${OPENGL_LIBRARIES})
ELSE()
    SET(OPENGL_LIBS GL X11 Xxf86vm pthread Xrandr Xi Xinerama Xcursor)
ENDIF()

SET(LAB_ENV_ROOT ${CMAKE_CURRENT_DIR})

if (MSVC)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/bin>)
else()
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
endif()

add_subdirectory(${PROJECT_SOURCE_DIR}/include/glm)
add_subdirectory(src/Engine)
add_subdirectory(src/Lab3)